# cpp-ai-agent

./: .gitignore  CMakeLists.txt  README.md  test.txt
docs/: architecture.md
include/: agent.h  echo_tool.h  file_tool.h  json_parser.h  llm_client.h  memory.h  shell_tool.h  task_queue.h  thread_pool.h  tool.h  tool_manager.h
src/: agent.cpp  echo_tool.cpp  file_tool.cpp  json_parser.cpp  llm_client.cpp  main.cpp  memory.cpp  shell_tool.cpp  task_queue.cpp  thread_pool.cpp  tool_manager.cpp
